Solve sidebar overlap with the game buttons

--- a/srcs/frontend/static/css/index.css
+++ b/srcs/frontend/static/css/index.css
@@ -56,6 +56,10 @@ main {
 }
 
 /* SideBar */
+#sidebar {
+  z-index: 10;
+}
+
 .sidebar-outter-wrapper, .sidebar-wrapper {
   min-width: 250px;
   max-width: 250px;
